[gd_scene load_steps=3 format=2]

[ext_resource path="res://components/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/font_title.tres" type="DynamicFont" id=2]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.6 )

[node name="Title" type="Label" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Pause"

[node name="Menu" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 10.0
margin_top = 75.0
margin_right = 40.0
margin_bottom = 40.0

[node name="ContinueButton" type="Button" parent="Menu"]
margin_right = 136.0
margin_bottom = 20.0
text = "Continue"

[node name="MainMenuButton" type="Button" parent="Menu"]
margin_top = 24.0
margin_right = 136.0
margin_bottom = 44.0
text = "Back to main menu"

[node name="QuitButton" type="Button" parent="Menu"]
margin_top = 48.0
margin_right = 136.0
margin_bottom = 68.0
text = "Quit"
